--- a/unit-test-prod.properties
+++ b/unit-test-prod.properties
@@ -1,1 +1,5 @@
 unit-test.property= MS TEST G4 PROFILE PROD
+spring.datasource.url=jdbc:postgresql://localhost:5432/unitTestG4
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
