cambios unit-test-Dev

--- a/ms-prueba-datos-dev.properties
+++ b/ms-prueba-datos-dev.properties
@@ -1,2 +1,2 @@
 ms-prueba-datos.property= MS PRUEBA DATOS PROFILE DEV
-propiedad.test=Mensaje desde MS-PRUEBA properties externo DEV 
+propiedad.test=Mensaje desde MS-PRUEBA properties externo actualizando
