--- a/unit-test-dev.properties
+++ b/unit-test-dev.properties
@@ -1,4 +1,4 @@
 unit-test.property= MS TEST G4 PROFILE DEV
 spring.datasource.url=jdbc:postgresql://localhost:5432/unitTestG4
 spring.jpa.hibernate.ddl-auto=update
-propiedad.test=Mensaje desde properties externo DEV
+propiedad.test=Mensaje desde properties externo DEV actualizando
